Fix issue 8; Add unit tests validating fix; Update version and nuget dependency information.

--- a/DotNetVault.Test/ResourceFiles/Issue8TestCases.resx
+++ b/DotNetVault.Test/ResourceFiles/Issue8TestCases.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Issue8TestCase2Similar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\testcases\issue8testcase2similar.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="Issue8_TestCases" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\TestCases\Issue8_TestCases.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
